# sentry-rust-example

./: Cargo.toml
src/: main.rs
