[package]
name = "sentry-rust-example"
version = "0.1.0"
authors = ["Alberto Leal <mail4alberto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.18.1"
sentry-actix = "0.18.1"
actix-web = { version = "0.7", default-features = false }
